--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prismicio/client": "^7.5.0",
     "@prismicio/next": "^1.6.0",
     "@prismicio/react": "^2.8.0",
+    "animejs": "^3.2.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -21,9 +22,11 @@
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.41",
+    "@types/animejs": "^3.1.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.34",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "slice-machine-ui": "^2.2.0",
