--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.77.4",
+    "scrollreveal": "^4.0.9",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-transition-group": "^4.4.10",
     "@types/styled-components": "^5.1.34",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
