--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@prismicio/client": "^7.5.0",
     "@prismicio/next": "^1.6.0",
     "@prismicio/react": "^2.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
     "animejs": "^3.2.2",
+    "file-loader": "^6.2.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -30,9 +32,11 @@
     "@types/react-dom": "^18",
     "@types/react-transition-group": "^4.4.10",
     "@types/styled-components": "^5.1.34",
+    "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "slice-machine-ui": "^2.2.0",
+    "style-loader": "^4.0.0",
     "typescript": "^5"
   }
 }
