--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animejs": "^3.2.2",
     "file-loader": "^6.2.0",
     "next": "14.2.3",
     "react": "^18",
@@ -16,6 +17,7 @@
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
