--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-transition-group": "^4.4.5",
+    "scrollreveal": "^4.0.9",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
