--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-transition-group": "^4.4.5",
     "scrollreveal": "^4.0.9",
+    "sharp": "^0.33.4",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
