--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@prismicio/client": "^7.6.0",
     "@prismicio/next": "^1.6.0",
     "@prismicio/react": "^2.8.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "animejs": "^3.2.2",
     "file-loader": "^6.2.0",
     "next": "14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "react-transition-group": "^4.4.5",
     "scrollreveal": "^4.0.9",
     "sharp": "^0.33.4",
